[package]
name = "hilow"
version = "0.0.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
actix-web = "3"
actix-rt = "2"
dotenv = "0.15"
env_logger = "0.8"
log = "0.4"
sqlx = { version = "0.4", features = ["postgres", "runtime-actix-native-tls"] }

[dev-dependencies]
actix-rt = "2"
