[package]
name = "hilow"
version = "0.0.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
actix-web = "3"
actix-rt = "2"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.8"
futures = "0.3"
log = "0.4"
rand = "0.7"
rust-argon2 = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.4", features = ["offline", "postgres", "runtime-actix-native-tls", "uuid", "time"] }
uuid = "0.8"

[dev-dependencies]
actix-rt = "2"
